force-app/main/default/objects/Payment__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>IF(
    ISBLANK(Amount__c),
    0,
    IF(
        ISBLANK(Paid_Amount__c),
        Amount__c,
        MAX(Amount__c - Paid_Amount__c, 0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>