force-app/main/default/objects/Payment__c/fields/Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>