force-app/main/default/objects/Payment__c/fields/Downpayment__c.field-meta.xml
<CustomField>
    <fullName>Downpayment__c</fullName>
    <label>Downpayment %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>