force-app/main/default/objects/Payment__c/fields/Installment_Months__c.field-meta.xml
<CustomField>
    <fullName>Installment_Months__c</fullName>
    <label>Installment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>