force-app/main/default/objects/Payment__c/fields/Monthly_EMI__c.field-meta.xml
<CustomField>
    <fullName>Monthly_EMI__c</fullName>
    <label>Monthly EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>