force-app/main/default/objects/Payment__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <label>QR Code URL</label>
    <type>Url</type>
</CustomField>