force-app/main/default/objects/Payment__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <formula>IF(
  TEXT(Mode_of_Payment__c) = &apos;Bank Loan&apos;,
  (Amount__c - (Amount__c *  Downpayment__c  / 100)) * 
  (1 + ( Interest__c  / 100)),
  Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>