force-app/main/default/objects/Payment__c/fields/Total_Payable_Calculated_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Calculated_c__c</fullName>
    <label>Total Payable Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>